--- a/soc-frontend/index.html
+++ b/soc-frontend/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="static/DURGA.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Durga</title>
-        <script src="https://cdn.tailwindcss.com"></script>
+    <title>SOC</title>
+    
 
   </head>
   <body>
     <div id="app"></div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script> -->
 </html>
